# yugantar

./: .gitignore  ProjectJournal.md  README.md  alembic.ini  pyproject.toml
backend/: .dev.env  .dockerignore  .gitignore  entrypoint.sh  main.py  pyproject.toml  shell.nix
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/dependencies/: admin.py  auth.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  deposit.py  deposit_policy.py  loan.py  loan_payment.py  loan_policy.py  notification.py  ocr.py  user.py  user_login.py  user_route.py
backend/app/core/: __init__.py  config.py  db.py  redis_client.py  security.py  settings.py
backend/app/db/: __init__.py  config.py
backend/app/models/: __init__.py  base.py  deposit_model.py  expense_model.py  fine_model.py  loan_model.py  loan_payment.py  meeting_minutes_model.py  notification_model.py  receipt_model.py  user_model.py  users_model.py
backend/app/models/mixins/: money.py
backend/app/models/policy/: __init__.py  base_policy.py  deposit_policy.py  interest_policy.py  investment_policy.py  loan_policy.py  penalty_policy.py  policy_change_log.py
backend/app/schemas/: __init__.py  __inti__.py  deposit_schema.py  expense_schema.py  fine_schema.py  loan_payment_schema.py  loan_schema.py  meeting_minutes_schema.py  notification_schema.py  receipt_schema.py  smart_deposit_schema.py  user_schema.py
backend/app/schemas/policy/: deposit_policy_schema.py  loan_policy_schema.py
backend/app/scripts/: create_admin_user.py
backend/app/services/: __int__.py  deposit_policy_service.py  deposit_service.py  email_notify.py  fine_service.py  loan_payment_service.py  loan_policy_service.py  loan_service.py  ocr_service.py  policy_service.py  receipt_service.py  smart_deposit_service.py  user_service.py
backend/app/tasks/: __init__.py  ocr_task.py
backend/app/utils/: __init__.py  datetime_to_utc.py  deposit_date_utils.py  financial_utils.py
backend/ocr_test/: ocr_test.py  test.ipynb
docker/: Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  Dockerfile.frontend.dev  docker-compose.yml  nginx.conf
docker/secrets/: db_password.txt  pgadmin_password.txt
frontend/: .dockerignore  .gitignore
frontend/app/: package-lock.json
frontend/yugantar/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/yugantar/src/: App.tsx  const.ts  index.css
frontend/yugantar/src/api/: api.ts  interceptor.ts
frontend/yugantar/src/components/: AnimationSVGs.tsx  DashboardLayout.tsx  FinanceCharts.tsx  Header.tsx  Headers.tsx  Navigation.tsx  NotificationPanel.tsx  RoleModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/yugantar/src/config/: env.ts
frontend/yugantar/src/constants/: roles.ts
frontend/yugantar/src/contexts/: AuthContext.tsx  ThemeContext.tsx  (+1 more)
(+32 files in other folders)
